added tests and changed layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <li><a href="http://www....">Questions</a></li>
         <li><a href="http://www....">News</a></li>
         <li><a href="http://www....">Contact</a></li>
+        <li><%= Time.now %></li>
       </ul>
     </div>
     <div id="main">
