--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,6 +55,7 @@
       padding: 0;
       li {
         list-style: none;
+        color: #bfb;
         a {
           color: #bfb;
           font-size: small;
